--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dotenv>=0.9.9",
+    "mysql-connector-python>=9.5.0",
+    "numpy>=2.4.1",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.3",
+    "pymysql>=1.1.2",
+    "python-dotenv>=1.2.1",
+    "scikit-learn>=1.8.0",
     "setuptools>=80.9.0",
 ]
